samples/_failures_safe/1761694298_6ec3a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7dae8e3.c: In function ‘main’:
./samples/SAFE/__tmp_a7dae8e3.c:132:5: error: expected ‘{’ at end of input
  132 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_a7dae8e3.c:132:5: error: expected declaration or statement at end of input
